--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,7 +22,7 @@
         <div class="main">
             <p class="sign" align="center">Sign in</p>
             <form class="form1" action="/login-form" method="post">
-                <input id="username" name="username" class="un " type="text" align="center" placeholder="Username">
+                <input id="username" name="username" class="un " type="email" align="center" placeholder="Email">
                 <input id="password" name="password" class="pass" type="password" align="center" placeholder="Password">
                 <a class="submit" align="center" href="/register">Register</a>
                 <button class="submit" align="center">Sign in</button>  
