--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -42,7 +42,7 @@
                             <td>
                                 <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
                                 <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
-                                <a href="#" class="btn btn-info">Edit</a>
+                                <a href="/edit/{{event_id}}" class="btn btn-info">Edit</a>
                                 <a href="/delete/{{event_id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?');">Delete</a>
                             </td>
                         </tr>
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="col-xs-6 col-md-4">
-                    {{> addevent}}
+                    {{> addevent }}
                 </div>
             </div>
         </div>
