changed to email

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -26,7 +26,7 @@
         <div class="main">
             <p class="sign" align="center">Sign in</p>           
             <form class="form1" action="/login-form" method="post">
-                <input id="username" name="username" class="un " type="email" align="center" placeholder="Email">
+                <input id="username" name="email" class="un " type="email" align="center" placeholder="Email">
                 <input id="password" name="password" class="pass" type="password" align="center" placeholder="Password">
   <!--               <a class="submit" align="center" href="/register">Register</a>-->
                 <button type="button" class="submit" align="center" data-toggle="modal" data-target="#Register">Register</button>
@@ -66,7 +66,7 @@
                                   </div>
                                   <div class="modal-body">
                                       <div class="tab">
-                                          <p><input class="register" placeholder="Username/Email address" name="username"></p>
+                                          <p><input class="register" placeholder="Username/Email address" name="email"></p>
                                           <p><input class="register" placeholder="Phone number" oninput="this.className = ''" name="phone"></p>
                                           <p><input class="register" placeholder="Password" oninput="this.className = ''" name="pw"></p>
                                           <p><input class="register" placeholder="Comfirm Password" oninput="this.className = ''" name="confirm_pw"></p>
