--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -6,6 +6,11 @@
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/vendor.css" type="text/css" rel="stylesheet" />
 
+        <script>
+            if ({{disable_edit}}){
+                document.getElementById("edit_button").disabled = true;
+            }
+        </script>
 
     </head>
 
@@ -42,7 +47,7 @@
                             <td>
                                 <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
                                 <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
-                                <a href="/edit/{{event_id}}" class="btn btn-info">Edit</a>
+                                <a href="/edit/{{event_id}}" class="btn btn-info" id="edit_button">Edit</a>
                                 <a href="/delete/{{event_id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?');">Delete</a>
                             </td>
                         </tr>
