notification subscription saves to db now

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,7 +8,7 @@
         <link href="/css/login.css" type="text/css" rel="stylesheet" />
         <link href="/css/register.css" type="text/css" rel="stylesheet" />
 
-        <script src="register.js"></script>
+        <script src="scripts/register.js"></script>
     </head>
 
     <body>
