--- a/style/event.css
+++ b/style/event.css
@@ -1,8 +1,24 @@
 #map {
     height: 400px;
-    width: 400px;
 }
 #content {
     height: 30vh;
     width: 30vw;
 }
+
+/* Customize the label (the container) */
+.container1 {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+  }
+  
+  /* Hide the browser's default radio button */
+ 
+  
+
+  
+  
