--- a/views/event.hbs
+++ b/views/event.hbs
@@ -11,13 +11,13 @@
         {{> menu}}
 
 
-        <div>
-            Event Page
+       
+        <div class="container col-xs-12">
             <div class="row">
-                <div class="container col-lg-6">
+                <div class="col-xs-6">
                     <div class="jumbotron">
                         <div>
-                            <form class="form-inline">
+                            <form class="form-inline" method="POST" action="/getall" >
                                                                 
 
                                 <label for="">Search events</label>
@@ -31,17 +31,17 @@
                                 </select>
 
                                 
-                                <div class="checkedbox">
-                                    <label for="">
-                                    <input type="checkbox" name="" class="allevent">all events
+                                <div>
+                                    <label for="" class="container1">
+                                    <input type="checkbox" name="allevent" value="getAllEvents">All event
+                                    
                                     </label>
                                 </div>
                                 {{#each data}}
-                                    {{!-- <div class="checkedbox"> --}}
-                                        {{!-- <label for=""> --}}
-                                    <input type="checkbox" name="" value={{name}} id="" class="checkeditem">{{name}}
-                                        {{!-- </label> --}}
-                                    {{!-- </div> --}}
+                                    <label class="container1">
+                                        <input type="checkbox" name={{name}} value={{name}} id="" class="checkeditem">{{name}}
+                                    </label>
+                                        
                                 {{/each}}
                                 <br>
 
@@ -50,33 +50,33 @@
                                     <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
                                 </div>
                                 <button type="submit" class="btn btn-default" id="getData">Search</button>
-                           </form>
+                            </form>
                         </div>
                     </div>
-		            <div class="col-lg-6">
+                    <div class="col-xs-6">
                     <div class="card" style="width: 50rem;">
                     <div class="card-body" id="events">
 
                     </div>
                     </div>
                     
-                </div>
+                    </div>
 
-            </div>
-                <div class="col-lg-6">
-                    <div class="container">
-                        Map View
-                        <div id="map"></div>
+                </div>
+                <div class="col-xs-6">
+                
+                    Map View
+                    <div id="map"></div>
                         <script src="/scripts/maps.js"></script>
                         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN6q6jOWczlbNgBPd_ljm857YUqpyIoVU&callback=initMap">
                         </script>
-                    </div>
+                
                 </div>
             </div>
         </div>
+       
             
            
-        
         
         
     </body>
