add addresss and postal code

--- a/views/partials/addevent.hbs
+++ b/views/partials/addevent.hbs
@@ -43,17 +43,23 @@
     </div>
   </div>
   <div class="form-group">
+    <label class="col-xs-3 control-label"><b>Address</b></label>
+    <div class="col-xs-7">
+      <input class="form-control" name="address" type="text">
+    </div>
+  </div>
+  <div class="form-group">
     <label class="col-xs-3 control-label"><b>City</b></label>
     <div class="col-xs-7">
       <input class="form-control" name="city" type="text">
     </div>
   </div>
-  <!--<div class="form-group">-->
-    <!--<label class="col-xs-3 control-label"><b>City</b></label>-->
-    <!--<div class="col-xs-7">-->
-      <!--<input class="form-control" name="city" type="text">-->
-    <!--</div>-->
-  <!--</div>-->
+  <div class="form-group">
+    <label class="col-xs-3 control-label"><b>Postal Code</b></label>
+    <div class="col-xs-7">
+      <input class="form-control" name="postal" type="text">
+    </div>
+  </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Description</b></label>
     <div class="col-xs-7">
