--- a/views/partials/addevent.hbs
+++ b/views/partials/addevent.hbs
@@ -55,9 +55,24 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="col-xs-3 control-label"><b>Postal Code</b></label>
+    <label class="col-xs-3 control-label"><b>Province</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="postal" type="text">
+        <select class="form-control" name="province">
+            <option value="" disabled selected>Select Province</option>
+            <option value="NL">NL</option>
+            <option value="PE">PE</option>
+            <option value="NS">NS</option>
+            <option value="NB">NB</option>
+            <option value="QC">QC</option>
+            <option value="ON">ON</option>
+            <option value="MB">MB</option>
+            <option value="SK">SK</option>
+            <option value="AB">AB</option>
+            <option value="BC">BC</option>
+            <option value="YT">YT</option>
+            <option value="NT">NT</option>
+            <option value="NU">NU</option>
+        </select>
     </div>
   </div>
   <div class="form-group">
