--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -13,10 +13,10 @@
 
         {{> menu}}
 
-        <div class="container col-xs-12">
+        <div class="col-md-12">
             <p><strong>Welcome {{vendor}}!</strong> </p>
             <div class="row">
-                <div class="col-xs-7">
+                <div class="col-md-7">
                     <table class="table table-bordered table-hover">
 
                         <thead>
@@ -52,7 +52,7 @@
                     </table>
                 </div>
 
-                <div class="col-xs-6 col-md-4">
+                <div class="col-md-5">
                     {{> addevent }}
                 </div>
             </div>
