--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        {{> bootstrap}}     
-        <link href="/css/menu.css" type="text/css" rel="stylesheet" />
-        <link href="/css/login.css" type="text/css" rel="stylesheet" />
-        <link href="/css/home.css" type="text/css" rel="stylesheet" />
 
-    </head>
+<head>
+    {{> bootstrap}}
+    <link href="/css/menu.css" type="text/css" rel="stylesheet" />
+    <link href="/css/login.css" type="text/css" rel="stylesheet" />
+    <link href="/css/home.css" type="text/css" rel="stylesheet" />
 
-    <body>
-        <div>{{> menu}}</div>
+</head>
 
-        <div class="container" style="text-align: center;">
-            <h1><b>Home</b></h1>
-            <p></p>
-        </div>
-        
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="ad">Advertisement</div>
-                </div>
-                <div class="col-md-6">
-                    <div class="ad">Blog Entries</div>
-                </div>
+<body>
+    <div>{{> menu}}</div>
+
+    <div class="container">
+        <div class="homeContainer">
+            <div class="playText"> <b>Let's Play! </div>
+            <div class="play">
+                <a href="/event">
+                    <div class="search">Search</div>
+                </a>
+                <a href="/event"><img src="/src/searchIcon.png" alt="HTML tutorial"
+                        style="width:50px;height:50px;border:0;"></a>
+                <a href="/profile">
+                    <div class="profile">Profile</div>
+                </a>
+                <a href="/profile"><img src="/src/profileIcon.png" alt="HTML tutorial"
+                        style="width:50px;height:50px;border:0;"></a>
             </div>
+
+
+
+
+            <div class="addContainer">
+                <div class="ad">Advertisement</div>
+            </div>
+
+            <div class="blogContainer">
+                <div class="blog">Blog Posts</div>
+            </div>
+            {{!-- <div class="col-md-6">
+                <div class="ad">Blog Entries</div>
+            </div> --}}
+
+            <div class="terms">
+                <a href="www.google.ca">Terms and Conditions</a>
+            </div>
+
         </div>
-    </body>
+
+
+    </div>
+
+</body>
 
 </html>
