--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,6 +7,7 @@
 
     <link href="/css/menu.css" type="text/css" rel="stylesheet" />
     <link href="/css/Profile.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -14,7 +15,7 @@
     {{> menu}}
 
     <div class="container">
-        <div class="dropdown">
+        {{!-- <div class="dropdown" style="z-index: -1;">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="true">
                 Select Profile
@@ -32,53 +33,64 @@
                     </a>
                 </li>
             </ul>
-            <!-- Modal -->
-            <div id="myModal" class="modal fade" role="dialog">
-                <div class="modal-dialog">
+            <!-- Modal --> --}}
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
 
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Edit Profile</h4>
-                        </div>
-                        <div class="modal-body">
-                            <p>Editing profile.</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
-                        </div>
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Edit Profile</h4>
                     </div>
-
+                    <div class="modal-body">
+                        <p>Editing profile.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
+                    </div>
                 </div>
+
             </div>
         </div>
-        <div class="row">
-            <div class="container col-md-6">
-                <div class="container">
-                    Profile Page
-                    <div class="container col-md-6">
-                        <div class="box">
-                            <div class="inline-block">
+    </div>
+    <div class="row">
+        <div class="container col-md-6">
+            <div class="container">
+                <div class="container col-md-6">
+                    <div class="box">
+                        <div class="inline-block">
 
-                                <div class="container">
-                                    <ul class="list-inline">
-                                        <li>
-                                            <a href="#">
-                                                <button type="button" class="btn btn-default">Edit profile</button>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <button type="button" class="btn btn-default">Delete profile</button>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!--                       <div class="btn-group-vertical" role="group" aria-label="..."></div>-->
+                            
+                            <!--                       <div class="btn-group-vertical" role="group" aria-label="..."></div>-->
+                        </div>
+
+                        <div class="card">
+                            <img src="/src/img.jpg" alt="John" style="width:100%">
+                            <h1>Jimmy</h1>
+                            <p class="title">Age: 7</p>
+                            <p>Hobbies: Swimming, Dance</p>
+                            <p><button>Change Profile</button></p>
+
+                        
+                        </div>
+
+                        <div class="container">
+                                <ul class="list-inline">
+                                    <li>
+                                        <a href="#">
+                                            <button type="button" class="btn btn-default">Edit profile</button>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <button type="button" class="btn btn-default">Delete profile</button>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
 
-                            <form class="form-horizontal pf">
+                        {{!-- <form class="form-horizontal pf">
                                 <img class="profile-pic" src="sample.jpg" alt="pic"
                                     style="max-width: 300px; max-height: 300px">
                                 <div class="form-group">
@@ -99,13 +111,13 @@
                                         <p class="form-control-static">Soccer, Drawing</p>
                                     </div>
                                 </div>
-                            </form>
-                        </div>
+                            </form> --}}
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="col-md-6">
+        {{!-- <div class="col-md-6">
                 <div class="container" style="width: 100%; background-color: lightgray" ;>
                     <h2>Favorites</h2>
                 </div>
@@ -148,8 +160,58 @@
                 </div>
 
 
-            </div>
+            </div> --}}
+
+        <div class="table-events">
+            {{!-- <div class="header">Events</div> --}}
+
+            <table cellspacing="0">
+                <tr>
+                    <th>Picture</th>
+                    <th>Event Name</th>
+                    <th>Organization</th>
+                    <th>Start Date</th>
+                    <th width="230">Description</th>
+                </tr>
+
+                <tr>
+                    <td><img src="/src/soccerIcon.png" alt="HTML tutorial"
+                        style="width:50px;height:50px;border:0;"></td>
+                    <td>12 and Under Soccer Camp</td>
+                    <td>Youth Sports</td>
+                    <td>2019-10-15</td>
+                    <td>Come join Coach Philips and his already famous kids soccer camp. All levels are welcome, and this program is aimed at kids 10 and under </td>
+                </tr>
+
+                <tr>
+                    <td><img src="/src/academiaIcon.png" alt="HTML tutorial"
+                        style="width:50px;height:50px;border:0;"></td>
+                    <td>Grade 10 Level Math Course</td>
+                    <td>Riverview Highschool</td>
+                    <td>2019-08-11</td>
+                    <td>Some extra help for kids who just need that extra edge in Math at a Grade 10 level.</td>
+                </tr>
+
+                <tr>
+                    <td><img src="/src/artsIcon.png" alt="HTML tutorial"
+                        style="width:50px;height:50px;border:0;"></td>
+                    <td>Learn2Paint</td>
+                    <td>Kids Camp</td>
+                    <td>2019-08-11</td>
+                    <td> Fun, messy, and creative. Helping young artsts start their carreers</td>
+                </tr>
+
+                <tr>
+                    <td><img src="/src/basketballIcon.png" alt="HTML tutorial"
+                        style="width:50px;height:50px;border:0;"></td>
+                    <td>Basketball Stars</td>
+                    <td>YMCA Nelson</td>
+                    <td>2019-10-01</td>
+                    <td>A high level training camp aimed at youth looking to take their basketball game seriously and to the next level.</td>
+                </tr>
+            </table>
         </div>
+    </div>
 
     </div>
 </body>
