--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -32,7 +32,7 @@
                         <tbody>
                         {{#each data}}
                         <tr>
-                            <td>{{event_id}} </td>
+                            <td id="event_id{{event_id}}" name="event_id{{event_id}}">{{event_id}} </td>
                             <td>{{vendor_name}}</td>
                             <td>{{event}}</td>
                             <td>{{description}}</td>
@@ -43,8 +43,8 @@
                             <td>
                                 <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
                                 <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
-                                <a href="#" class="btn btn-info">Approve</a>
-                                <a href="#" class="btn btn-danger">Delete</a>
+                                <button onclick="approve({{event_id}})" class="btn btn-info">Approve</button>                               
+                                <button href="#" class="btn btn-danger">Delete</button>
                             </td>
                         </tr>
                         {{/each}}
