--- a/views/partials/addevent.hbs
+++ b/views/partials/addevent.hbs
@@ -1,41 +1,41 @@
 
-<p class="text-center">Event Form</p>
+<p class="text-center form_text">Event Form</p>
 <form class="form-horizontal" method="POST" action="/addevent">
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Event Name</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="eventname" type="text">
+      <input class="form-control" name="eventname" type="text" required>
     </div>
   </div>      
   <div class="form-group">         
     <label class="col-xs-3 control-label"><b>Start Date</b></label>
      <div class="col-xs-7">
-       <input class="form-control" name="start_date" type="date" id="startdate">
+       <input class="form-control" name="start_date" type="date" id="startdate" required>
      </div>    
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>End Date</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="end_date" type="date" id="enddate">
+      <input class="form-control" name="end_date" type="date" id="enddate" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Start Time</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="start_time" type="time" id="starttime">
+      <input class="form-control" name="start_time" type="time" id="starttime" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>End Time</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="end_time" type="time" id="endtime">
+      <input class="form-control" name="end_time" type="time" id="endtime" required>
     </div>
   </div>
   <div class="form-group">
-    <label class="col-xs-3 control-label"><b>Tags</b><b>{{test}}</b></label>
+    <label class="col-xs-3 control-label"><b>Tags</b></label>
     <div class="col-xs-7">
         <select class="form-control" name="tag">
-            <option value="" disabled selected>Select event tags</option>
+            <option value="" disabled selected>Select Event Tags</option>
         {{#each tags}}
             <option values="{{name}}">{{name}}</option>
         {{/each}}
@@ -45,19 +45,19 @@
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Address</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="address" type="text">
+      <input class="form-control" name="address" type="text" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>City</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="city" type="text">
+      <input class="form-control" name="city" type="text" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Province</b></label>
     <div class="col-xs-7">
-        <select class="form-control" name="province">
+        <select class="form-control" name="province" required>
             <option value="" disabled selected>Select Province</option>
             <option value="NL">NL</option>
             <option value="PE">PE</option>
@@ -76,14 +76,20 @@
     </div>
   </div>
   <div class="form-group">
+      <label class="col-xs-3 control-label"><b>Event Link</b></label>
+      <div class="col-xs-7">
+          <input class="form-control" name="link" type="text" required>
+      </div>
+  </div>
+  <div class="form-group">
     <label class="col-xs-3 control-label"><b>Description</b></label>
     <div class="col-xs-7">
-      <textarea class="form-control" name="description" rows="8"></textarea>
+      <textarea class="form-control" name="description" rows="8" required></textarea>
     </div>
   </div>
   <div class="form-group">
     <div class="col-xs-offset-3 col-xs-10">
-      <button type="submit" class="btn btn-default" onclick="return confirm('Are you sure you want to add event?')">Add</button>
+      <button type="submit" class="btn btn-primary" onclick="return confirm('Are you sure you want to add event?')">Add</button>
     </div>
   </div>
   
