--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -6,11 +6,6 @@
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/vendor.css" type="text/css" rel="stylesheet" />
 
-        <script>
-            if ({{disable_edit}}){
-                document.getElementById("edit_button").disabled = true;
-            }
-        </script>
 
     </head>
 
@@ -45,9 +40,11 @@
                             <td>{{tag_name}}</td>
                             <td>{{isApproved}}</td>
                             <td>
-                                <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
-                                <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
-                                <a href="/edit/{{event_id}}" class="btn btn-info" id="edit_button">Edit</a>
+                                {{#ifCond isApproved "Pending"}}
+                                    <a href="/edit/{{event_id}}" class="btn btn-info">Edit</a>
+                                {{else}}
+                                    <a href="#" class="btn btn-info disabled">Edit</a>
+                                {{/ifCond}}
                                 <a href="/delete/{{event_id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?');">Delete</a>
                             </td>
                         </tr>
