--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,7 +8,6 @@
         <link href="/css/login.css" type="text/css" rel="stylesheet" />
         <link href="/css/register.css" type="text/css" rel="stylesheet" />
 
-        <script src="register.js"></script>
     </head>
 
     <body>
@@ -67,9 +66,9 @@
                                   <div class="modal-body">
                                       <div class="tab">
                                           <p><input class="register" placeholder="Username/Email address" name="email"></p>
-                                          <p><input class="register" placeholder="Phone number" oninput="this.className = ''" name="phone"></p>
-                                          <p><input class="register" placeholder="Password" oninput="this.className = ''" name="pw"></p>
-                                          <p><input class="register" placeholder="Comfirm Password" oninput="this.className = ''" name="confirm_pw"></p>
+                                          <p><input class="register" placeholder="Phone number"  name="phone"></p>
+                                          <p><input class="register" placeholder="Password"  name="pw"></p>
+                                          <p><input class="register" placeholder="Comfirm Password"  name="confirm_pw"></p>
                                       </div>
                                   </div>
                                   <div class="modal-footer">
@@ -122,8 +121,8 @@
                                   </div>
                                   <div class="modal-body">
                                       <div class="tab">
-                                          <p>My kid<input class="register-kid" placeholder="Nickname" name="nickname">is a <span>{{>gender}}</span> who is interested in {{>interests}}</p>
-                                          <p>My kid<input class="register-kid" placeholder="Nickname" name="nickname">is a <span>{{>gender}}</span> who is interested in<input class="register-kid" placeholder="Interest" name="interest"></p>
+                                          {{>KidRegister}}
+                                          <p>My 2nd kid<input class="register-kid" placeholder="Nickname" name="nickname">is a <span>{{>gender}}</span> who is interested in {{>interests}}</p>
                                           <p>My kid<input class="register-kid" placeholder="Nickname" name="nickname">is a <span>{{>gender}}</span> who is interested in<input class="register-kid" placeholder="Interest" name="interest"></p>
                                       </div>
                                   </div>
@@ -190,13 +189,13 @@
                                   </div>
                                   <div class="modal-body" id="B-1">
                                       <div class="tab">
-                                          <p><input class="register" id="bus_Fname" placeholder="First Name" oninput="this.className = ''" name="fname"></p>
-                                          <p><input class="register" id="bus_Lname" placeholder="Last name" oninput="this.className = ''" name="lname"></p>
-                                          <p><input class="register" id="bus_Orgname" placeholder="Organization name" oninput="this.className = ''" name="org_name"></p>
-                                          <p><input class="register" id="bus_Phone" placeholder="Phone number" oninput="this.className = ''" name="phone"></p>
-                                          <p><input class="register" id="bus_Email" placeholder="Email address" oninput="this.className = ''" name="email"></p>
-                                          <p><input class="register" id="bus_PW" placeholder="Password" oninput="this.className = ''" name="pw"></p>
-                                          <p><input class="register" id="bus_PWconfirm" placeholder="Comfirm Password" oninput="this.className = ''" name="confirm_pw"></p>
+                                          <p><input class="register" id="bus_Fname" placeholder="First Name" name="fname"></p>
+                                          <p><input class="register" id="bus_Lname" placeholder="Last name" name="lname"></p>
+                                          <p><input class="register" id="bus_Orgname" placeholder="Organization name" name="org_name"></p>
+                                          <p><input class="register" id="bus_Phone" placeholder="Phone number" name="phone"></p>
+                                          <p><input class="register" id="bus_Email" placeholder="Email address" name="email"></p>
+                                          <p><input class="register" id="bus_PW" placeholder="Password" name="pw"></p>
+                                          <p><input class="register" id="bus_PWconfirm" placeholder="Comfirm Password" name="confirm_pw"></p>
                                       </div>
                                   </div>
                                   <div class="modal-footer">
@@ -217,31 +216,31 @@
                                   </div>
                                   <div class="modal-body" id="B-2">
                                       <form class="form-horizontal pf"><!---->
-                                          <div class="form-group">
-                                              <label class="control-label">First Name</label>
+                                          <div class="form-group" style="margin-left:10px">
+                                              <label class="control-label" >First Name</label>
                                               <div>
                                                   <p class="form-control-static" id="Vendor_Fname"></p>
                                               </div>
                                           </div>
-                                          <div class="form-group">
-                                              <label class=" control-label">Last Name</label>
+                                          <div class="form-group" style="margin-left:10px">
+                                              <label class=" control-label" >Last Name</label>
                                               <div class="">
                                                   <p class="form-control-static" id="Vendor_Lname"></p>
                                               </div>
                                           </div>
-                                          <div class="form-group">
+                                          <div class="form-group" style="margin-left:10px">
                                               <label class="control-label">Organization</label>
                                               <div class="">
                                                   <p class="form-control-static" id="Vendor_Org"></p>
                                               </div>
                                           </div>
-                                          <div class="form-group">
+                                          <div class="form-group" style="margin-left:10px">
                                               <label class="control-label">Phone Number</label>
                                               <div class="">
                                                   <p class="form-control-static" id="Vendor_Phone"></p>
                                               </div>
                                           </div>
-                                          <div class="form-group">
+                                          <div class="form-group" style="margin-left:10px">
                                               <label class="control-label">Email Address</label>
                                               <div class="">
                                                   <p class="form-control-static" id="Vendor_Email"></p>
@@ -250,8 +249,8 @@
                                       </form>
                                       <hr class="my-2">
                                       <div class="custom-control custom-checkbox">
-                                          <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                          <label class="custom-control-label" for="customCheck1">I have read and agreed to the Terms & conditions.</label>
+                                          <input type="checkbox" class="custom-control-input" id="bus_TermCheck">
+                                          <label class="custom-control-label" for="bus_TermCheck">I have read and agreed to the Terms & conditions.</label>
                                       </div>
                                   </div>
                                   <div class="modal-footer">
@@ -341,19 +340,64 @@
         //set "Continue" button id on click to hide 1st modal and trigger 2nd modal
         //$("#B-Register-info").on( "click",  function Summary_Bus()); 
         $("#B-Register-info").on( "click",  function() {
-            //function Summary_Bus();
-            $('#Business1').modal('hide');
-            $('#Business2').modal('show');
+            
+            var b_Fname = $("#bus_Fname").val();
+            var b_Lname = $("#bus_Lname").val();
+            var b_Org = $("#bus_Orgname").val();
+            var b_Phone = $("#bus_Phone").val();
+            var b_Email = $("#bus_Email").val();
+            var b_PW = $("#bus_PW").val();
+            var b_PWconfirm = $("#bus_PWconfirm").val();            
+
+            if (b_PW != b_PWconfirm) {
+                alert("Passwords do not match!")
+            }
+            else{
+                $('#Business1').modal('hide');
+                $('#Business2').modal('show');
+                $("#Vendor_Fname").text(b_Fname);
+                $("#Vendor_Lname").html(b_Lname);
+                $("#Vendor_Org").html(b_Org);
+                $("#Vendor_Phone").html(b_Phone);
+                $("#Vendor_Email").html(b_Email); 
+            }
+
+            
         });
         //set "Back" button id on click to hide 2nd modal and trigger 1st modal
+        //jquery: .empty() might be redundant
         $("#B-Redo-info").on( "click", function() {
+            $("#Vendor_Fname").empty();
+            $("#Vendor_Lname").empty();
+            $("#Vendor_Org").empty();
+            $("#Vendor_Phone").empty();
+            $("#Vendor_Email").empty();
+
             $('#Business2').modal('hide');
             $('#Business1').modal('show');
         });
         //set "Confirm" button id on click to hide 2nd modal and trigger 3rd modal
         $("#B-Confirm-info").on( "click", function() {
-            $('#Business2').modal('hide');
-            $('#Business3').modal('show');
+
+            if ($("#bus_TermCheck").is(':checked')){
+                Bus_Account = {
+                    "First Name": $("#bus_Fname").val(),
+                    "Last Name": $("#bus_Lname").val(),
+                    "Oraganization": $("#bus_Orgname").val(),
+                    "Phone Number": $("#bus_Phone").val(),
+                    "Email Address": $("#bus_Email").val(),
+                    "Password": $("#bus_PWconfirm").val()
+                };
+
+                Vendor_Account = JSON.stringify(Bus_Account);
+                console.log(Vendor_Account);
+                $('#Business2').modal('hide');
+                $('#Business3').modal('show');
+            }
+
+            else{
+                alert("Please argee to our Terms & Conditions.")
+            }   
         });
     </script>    
         
