Notifications working on Approve!
Still need to add detailed info to the notification body and link to the website

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -32,7 +32,7 @@
                         <tbody>
                         {{#each data}}
                         <tr>
-                            <td id="event_id{{event_id}}" name="event_id{{event_id}}">{{event_id}} </td>
+                            <td>{{event_id}} </td>
                             <td>{{vendor_name}}</td>
                             <td>{{event}}</td>
                             <td>{{description}}</td>
