Notifications working for everyone

--- a/views/event.hbs
+++ b/views/event.hbs
@@ -11,7 +11,7 @@
         {{> menu}}
 
 
-       
+       <button id="permission-btn" onclick="main()">Notify Me!</button>
         <div class="container col-xs-12">
             <div class="row">
                 <div class="col-xs-6">
@@ -73,4 +73,6 @@
     </body>
 
 </html>
+
+<script src="/scripts/notifications.js"></script>
 
