--- a/views/login.hbs
+++ b/views/login.hbs
@@ -181,13 +181,13 @@
 
               <!-- Business Modal: Method #2 -->
                   <div class="modal fade" id="Business1" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                          <div class="modal-dialog">
+                          <div class="modal-dialog" style="overflow-y: initial !important">
                               <div class="modal-content">
                                   <div class="modal-header">
                                       <button type="button" class="close" data-dismiss="modal">&times;</button>
                                       <h4 class="modal-title">Create Account</h4>
                                   </div>
-                                  <div class="modal-body" id="B-1">
+                                  <div class="modal-body" id="B-1" style="max-height: calc(100vh - 200px); overflow-y: auto;">
                                       <div class="tab">
                                           <p><input class="register" id="bus_Fname" placeholder="First Name" name="fname"></p>
                                           <p><input class="register" id="bus_Lname" placeholder="Last name" name="lname"></p>
@@ -209,14 +209,14 @@
 
                   <!-- Modal Page 2 -->
                   <div class="modal fade" id="Business2" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                          <div class="modal-dialog modal-dialog-scrollable" role="document">
+                          <div class="modal-dialog" style="overflow-y: initial !important">
                               <!-- Modal content-->
                               <div class="modal-content">
                                   <div class="modal-header">
                                       <button type="button" class="close" data-dismiss="modal">&times;</button>
                                       <h4 class="modal-title">Confirm Account Info</h4>
                                   </div>
-                                  <div class="modal-body" id="B-2">
+                                  <div class="modal-body" id="B-2" style="max-height: calc(100vh - 200px); overflow-y: auto;">
                                       <form class="form-horizontal pf"><!---->
                                           <div class="form-group" style="margin-left:10px">
                                               <label class="control-label" >First Name</label>
