changed all event to checked

--- a/views/event.hbs
+++ b/views/event.hbs
@@ -25,7 +25,7 @@
                                 
                                 <div>
                                     <label for="" class="container1">
-                                    <input type="checkbox" id="allevents" value="getAllEvents">All event
+                                    <input type="checkbox" id="allevents" value="getAllEvents" checked>All event
                                     
                                     </label>
                                 </div>
