deloy to heroku

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
             <div class="playText"> <b>Let's Play! </div>
             <div class="play">
                 <a href="/event">
-                    <div class="search">Search</div>
+                    <div class="search">Events</div>
                 </a>
                 <a href="/event"><img src="/src/searchIcon.png" alt="HTML tutorial"
                         style="width:50px;height:50px;border:0;"></a>
