--- a/views/addevent_error.hbs
+++ b/views/addevent_error.hbs
@@ -7,7 +7,11 @@
     <link href="/css/vendor.css" type="text/css" rel="stylesheet" />
 
     <script src="/scripts/vendor.js"></script>
-
+    <script>
+        if ({{isError}}) {
+            alert("{{error}}")
+        }
+    </script>
 
 </head>
 
@@ -22,40 +26,40 @@
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Event Name</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="eventname" type="text" required>
+      <input class="form-control" name="eventname" type="text" value="{{form.event_name}}" required>
     </div>
   </div>      
   <div class="form-group">         
     <label class="col-xs-3 control-label"><b>Start Date</b></label>
      <div class="col-xs-7">
-       <input class="form-control" name="start_date" type="date" id="startdate" required>
+       <input class="form-control" name="start_date" type="date" id="startdate" value="{{form.start_date}}" required>
      </div>    
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>End Date</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="end_date" type="date" id="enddate" required>
+      <input class="form-control" name="end_date" type="date" id="enddate" value="{{form.end_date}}" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Start Time</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="start_time" type="time" id="starttime" required>
+      <input class="form-control" name="start_time" type="time" id="starttime" value="{{form.start_time}}" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>End Time</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="end_time" type="time" id="endtime" required>
+      <input class="form-control" name="end_time" type="time" id="endtime" value="{{form.end_time}}" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Tags</b></label>
     <div class="col-xs-7">
         <select class="form-control" name="tag">
-            <option value="" disabled selected>Select Event Tags</option>
+            <option value="{{form.event_tag}}">{{form.event_tag}}</option>
         {{#each tags}}
-            <option values="{{name}}">{{name}}</option>
+            <option value="{{name}}">{{name}}</option>
         {{/each}}
         </select>
     </div>
@@ -63,20 +67,21 @@
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Address</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="address" type="text" required>
+      <input class="form-control" name="address" type="text" value="{{form.address}}" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>City</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="city" type="text" required>
+      <input class="form-control" name="city" type="text" value="{{form.city}}" required>
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Province</b></label>
     <div class="col-xs-7">
         <select class="form-control" name="province" required>
-            <option value="BC" selected>BC</option>
+            <option value="{{form.province}}" >{{form.province}}</option>
+            <option value="BC">BC</option>
             <option value="NL">NL</option>
             <option value="PE">PE</option>
             <option value="NS">NS</option>
@@ -95,13 +100,13 @@
   <div class="form-group">
       <label class="col-xs-3 control-label"><b>Event Link</b></label>
       <div class="col-xs-7">
-          <input class="form-control" name="link" type="text" required>
+          <input class="form-control" name="link" type="text" value="{{form.link}}" required>
       </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Description</b></label>
     <div class="col-xs-7">
-      <textarea class="form-control" name="description" rows="8" required></textarea>
+      <textarea class="form-control" name="description" rows="8" required>{{form.description}}</textarea>
     </div>
   </div>
   <div class="form-group">
