--- a/views/editevent.hbs
+++ b/views/editevent.hbs
@@ -6,6 +6,13 @@
     <link href="/css/menu.css" type="text/css" rel="stylesheet" />
     <link href="/css/vendor.css" type="text/css" rel="stylesheet" />
 
+    <script src="/scripts/vendor.js"></script>
+    <script>
+        if ({{isError}}) {
+            alert("{{error}}")
+        }
+    </script>
+
 </head>
 
 <body>
@@ -25,7 +32,7 @@
     <div class="form-group">
     <label class="col-xs-3 control-label"><b>Event Name</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="eventname" type="text" value="{{data.name}}" required>
+      <input class="form-control" name="eventname" type="text" value="{{data.event_name}}" required>
     </div>
   </div>
   <div class="form-group">
@@ -58,7 +65,7 @@
         <select class="form-control" name="tag" required>
             <option value="{{data.event_tag}}">{{data.event_tag}}</option>
         {{#each tags}}
-            <option values="{{name}}">{{name}}</option>
+            <option value="{{name}}">{{name}}</option>
         {{/each}}
         </select>
     </div>
