fix the table in profile page

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -168,7 +168,7 @@
 
             <table cellspacing="0">
                 <tr>
-                    <th>Picture</th>
+                    <th>Category</th>
                     <th>Event Name</th>
                     <th>Organization</th>
                     <th>Start Date</th>
@@ -176,10 +176,8 @@
                 </tr>
                 {{#each data}}
                     <tr>
-                        <td><img src="/src/basketballIcon.png" alt="HTML tutorial"
-                        style="width:50px;height:50px;border:0;"> </td>
-                        <td>{{name}}</td>
                         <td>{{category}}</td>
+                        <td>{{vendorname}}</td>
                         <td>{{start_date}}</td>
                         <td>
                             {{description}}
